Bug 493075 -  Website: Text gets cut off in featured persona/featured designer module

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -505,7 +505,7 @@ img.preview  {
 }
 
 .slideshow {
-    height: 240px;
+    height: 300px;
     width: 1500px;
     overflow: hidden;
 }
